--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=config-server
 spring.cloud.config.enabled=true
 spring.cloud.config.server.git.uri=https://github.com/1DanielSC/git-config-repo
-#spring.cloud.config.server.git.search-paths={application}-{profile}
-spring.cloud.config.label:master
+spring.cloud.config.server.git.search-paths={application}/{profile}
+spring.cloud.config.server.git.default-label=master
 server.port=8888
